kubernetes-app/sample-ds.yaml
apiVersion: apps/v1
# node毎に１つのpodが作成される
# fluentdなど、ホストごとに必要なミドルウェアを起動させておく際に使うことが多い
kind: DaemonSet
metadata:
  name: sample-ds
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.12
