kubernetes-app/sample-externaldns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-externaldns
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 8.8.8.8
      - 8.8.4.4
    searches:
      - example.com
    options:
      - name: ndots
        value: "5"
