kubernetes-app/sample-hostaliases.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-hostaliases
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
  hostAliases:
    - ip: 8.8.8.8
      hostnames:
        - google-dns
        - google-public-dns
