kubernetes-app/sample-projected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-projected
spec:
  containers:
  - name: nginx-container
    image: nginx:1.12
    volumeMounts:
    # pod上の/src配下に、secret configMap などを集約させることができる
    - mountPath: /srv
      name: projected-volume
  volumes:
  - name: projected-volume
    projected:
      sources:
      - secret:
          name: sample-db-auth
          items:
            # secretのusernameというkeyで作成したsecretを指定
            - key: username
              path: secret/username.txt
      - configMap:
          name: sample-configmap
          items:
            - key: nginx.conf
              path: configmap/nginx.conf
