kubernetes-app/sample-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sampel-pvc-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
          name: "http"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: nginx-pvc
  volumes:
    - name: nginx-pvc
      # podからpersistentVolumClaimを利用する場合は、以下のように
      # 名前を指定する
      persistentVolumeClaim:
        claimName: sample-pvc
