kubernetes-app/sample-clusterip-multi.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-cluster-multi
spec:
  type: ClusterIP
  ports:
    # 複数のportにロードバランシングすることができる
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
    - name: "https-port"
      protocol: "TCP"
      port: 8443
      targetPort: 443
  selector:
    app: sample-app
