kubernetes-app/sample-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
      # 全てのnode上で以下のportで待ち受ける
      nodePort: 30080
  selector:
    app: sample-app
